# nuvoton-ipmi-oem

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  gpio_oem.cpp  gpio_oem.hpp  gpio_oem_npcm8xx.hpp  ipmi_fw.cpp  ipmi_fw.hpp  ipmi_pwm.cpp  ipmi_pwm.hpp  nuvoton_defs.hpp  oemcommands.cpp  oemcommands.hpp
script/: gpio_gen_header.py  gpio_oem.tmp.hpp  npcm8xx_pins.hpp  version_verify.py
